add: block description and management

--- a/main.html
+++ b/main.html
@@ -105,6 +105,125 @@
     <!-- /.header-slider -->
   </header>
 
+  <div class="description">
+    <div class="container">
+      <div class="description-about_us">
+        <span class="about_us__title">About Us</span>
+        <div class="line"></div>
+        <!-- /.line -->
+        <span class="about_us__text">
+          Shree Venkateshwara College of Arts and Science, an institution for achievers, located in a serene atmosphere, is
+          situated at Othakuthirai, near Gobichettipalayam. The college was founded by Shree Venkateshwara Educational and
+          Charitable Trust in the year 2019 with the divine aim of educating the students of rural background. It inculcates
+          in
+          them, the technical and innovative skills catering to their needs of the present scenario.
+          The Institution also provides excellent infrastructure in relation to practical. Equipped with state of art,
+          laboratories, workshops and libraries, the institution aims to provide the total gamut of requirements without any
+          lacuna.
+          The Institution has employed dedicated, experienced and empathetic staff to guide and nurture the budding students
+          to
+          become the pillars of a good society.
+          It imparts professionalism and critical thinking in them, . . .
+        </span>
+        <button class="about_us__button">
+          <span class="button__text">Read More</span>
+          <img src="#" alt="Icon: Arrow right" class="button__arrow_right">
+        </button>
+      </div>
+      <!-- /.description-about_us -->
+      <div class="description-vision">
+        <span class="vision__title">Vision</span>
+        <div class="line"></div>
+        <!-- /.line -->
+        <span class="vision__text">
+          “To become a premier technical Institute to produce value based competent professionals with scientific temper, team
+          spirit and ethics.”
+        </span>
+      </div>
+      <!-- /.description-vision -->
+      <div class="description-mission">
+        <span class="description__title">Mission</span>
+        <div class="line"></div>
+        <!-- /.line -->
+        <div class="description__tasks">
+          <img src="#" alt="Icon: Check mark" class="tasks__check">
+          <span class="tasks__text">
+            To provide good academic ambience for inculcate a culture of continuous learning with appropriate resources and
+            facilities.
+          </span>
+        </div>
+        <!-- /.description__tasks -->
+        
+        <div class="description__tasks">
+          <img src="#" alt="Icon: Check mark" class="tasks__check">
+          <span class="tasks__text">
+            To commit the students towards industrial needs through value based education and modern technology.
+          </span>
+        </div>
+        <!-- /.description__tasks -->
+
+        <div class="description__tasks">
+          <img src="#" alt="Icon: Check mark" class="tasks__check">
+          <span class="tasks__text">
+            To provide effective and responsible graduates with social commitment and ethics.
+          </span>
+        </div>
+        <!-- /.description__tasks -->
+      </div>
+      <!-- /.description-mission -->
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.description -->
+
+  <div class="management">
+    <span class="management-title">Our management</span>
+    <div class="line"></div>
+    <!-- /.line -->
+    <div class="container">
+      <div class="management-person">
+        <img src="#" alt="Img: person 1" class="person__photo">
+        <div class="over_photo">
+          <span class="person__fname">Thiru. K.C. KARUPANAN</span>
+          <span class="person__post">Secretary</span>
+          <button class="person__about">
+            <img src="#" alt="Icon: Arrow right" class="arrow_right">
+          </button>
+        </div>
+        <!-- /.over_photo -->
+      </div>
+      <!-- /.management-person -->
+
+      <div class="management-person">
+        <img src="#" alt="Img: person 2" class="person__photo">
+        <div class="over_photo">
+          <span class="person__fname">Thiru. P. VENKATACHALAM</span>
+          <span class="person__post">Chairman</span>
+          <button class="person__about">
+            <img src="#" alt="Icon: Arrow right" class="arrow_right">
+          </button>
+        </div>
+        <!-- /.over_photo -->
+      </div>
+      <!-- /.management-person -->
+
+      <div class="management-person">
+        <img src="#" alt="Img: person 3" class="person__photo">
+        <div class="over_photo">
+          <span class="person__fname">Dr. A. MOHANASUNDARAM</span>
+          <span class="person__post">Principal</span>
+          <button class="person__about">
+            <img src="#" alt="Icon: Arrow right" class="arrow_right">
+          </button>
+        </div>
+        <!-- /.over_photo -->
+      </div>
+      <!-- /.management-person -->
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.management -->
+
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.1.0_swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
