--- a/main.html
+++ b/main.html
@@ -303,6 +303,47 @@
   </div>
   <!-- /.courses -->
 
+  <div class="achievements">
+    <div class="achievemnts-block block-1">
+      <span class="block__number">4+</span>
+      <span class="block__text">Years of Academic Excellence</span>
+    </div>
+    <!-- /.achievemnts-block -->
+
+    <div class="achievemnts-block block-2">
+      <span class="block__number">6+</span>
+      <span class="block__text">Extra Curricular Activities</span>
+    </div>
+    <!-- /.achievemnts-block block-2 -->
+
+    <div class="achievemnts-block block-3">
+      <span class="block__number">50+</span>
+      <span class="block__text">Experienced Faculty</span>
+    </div>
+    <!-- /.achievemnts-block block-3 -->
+
+    <div class="achievemnts-block block-4">
+      <span class="block__number">5+</span>
+      <span class="block__text">Lab Facilities</span>
+    </div>
+    <!-- /.achievemnts-block block-4 -->
+
+    <div class="achievemnts-block block-5">
+      <span class="block__number">20+</span>
+      <span class="block__text">UG, PG & Research Programmes</span>
+    </div>
+    <!-- /.achievemnts-block block-5 -->
+    
+    <div class="achievemnts-block block-6">
+      <span class="block__number">12+</span>
+      <span class="block__text">Recruiters</span>
+    </div>
+    <!-- /.achievemnts-block block-6 -->
+
+    <img src="#" alt="Img: building" class="achievements__img">
+  </div>
+  <!-- /.achievements -->
+
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.1.0_swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
