add: block facilities and slider

--- a/main.html
+++ b/main.html
@@ -344,6 +344,54 @@
   </div>
   <!-- /.achievements -->
 
+  <div class="facilities">
+    <span class="facilities-title">Facilities</span>
+    <div class="line"></div>
+    <div class="container">
+      <!-- Slider main container -->
+      <div class="swiper">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="slide_facilities">
+              <img src="#" alt="Img: facilities" class="facilities__img">
+              <span class="facilities__title">Lab Facility</span>
+            </div>
+            <!-- /.slide_facilities -->
+
+            <div class="slide_facilities">
+              <img src="#" alt="Img: facilities" class="facilities__img">
+              <span class="facilities__title">Office & Exam Cell</span>
+            </div>
+            <!-- /.slide_facilities -->
+
+            <div class="slide_facilities">
+              <img src="#" alt="Img: facilities" class="facilities__img">
+              <span class="facilities__title">Library</span>
+            </div>
+            <!-- /.slide_facilities -->
+          </div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          ...
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+      
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      
+        <!-- If we need scrollbar -->
+        <div class="swiper-scrollbar"></div>
+      </div>
+
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.facilities -->
+
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.1.0_swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
