add: block footer fix: sass files

--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
     <!-- /.header-bread_crumb -->
     <div class="header-slider">
       <!-- Slider main container -->
-      <div class="swiper" width="600px" height="300px">
+      <div class="swiper">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
@@ -566,6 +566,80 @@
     <!-- /.container -->
   </div>
   <!-- /.news -->
+
+  <footer class="footer">
+    <div class="footer-mailling_list">
+      <span class="footer-title">Stay Tuned With Us !</span>
+      <form action="#" class="footer-mailling">
+        <span class="bg_message">Enter your email address</span>
+        <button class="button__subscribe">Subscribe</button>
+      </form>
+    </div>
+    <!-- /.footer-mailling_list -->
+
+    <div class="footer-links">
+      <div class="footer__college">
+        <img src="#" alt="Img: Logo college" class="college-logo">
+        <span class="college-name">SHREE VENKATESHWARA ARTS & SCIENCE(Co-Education) College</span>
+        <span class="college-address__first">
+          Othakuthirai, Gobichettipalayam - 638455, Erode Dt, Tamilnadu.
+        </span>
+        <span class="college-address__second">
+          Recognized by Government of Tamilnadu.Affiliated by Bharathiar University, Coimbatore, Tamilnadu.
+        </span>
+      </div>
+      <!-- /.footer__college -->
+      
+      <div class="footer__important_links">
+        <span class="important_links__title">Important Links</span>
+        <a href="#" class="links__link">Home</a>
+        <a href="#" class="links__link">About Us</a>
+        <a href="#" class="links__link">Courses</a>
+        <a href="#" class="links__link">Our Institutions</a>
+        <a href="#" class="links__link">Gallery</a>
+        <a href="#" class="links__link">Terms & Conditions</a>
+      </div>
+      <!-- /.footer__important_links -->
+
+      <div class="footer__quick_links">
+        <span class="quick_links__title">Quick Links</span>
+        <a href="#" class="links__link">Facilities</a>
+        <a href="#" class="links__link">Activities</a>
+        <a href="#" class="links__link">Placement</a>
+        <a href="#" class="links__link">Contact Us</a>
+      </div>
+      <!-- /.footer__quick_links -->
+
+      <div class="footer__contacts">
+        <span class="contacts__title">Contact Us</span>
+        <span class="contacts__address">
+          Erode - Gobi Main Road,Othakuthirai, 
+          K.Mettupalayam (Post) - 638 455 
+          Gobichettipalayam, Erode Dt,
+          Tamil Nadu.
+        </span>
+        <img src="#" alt="Icon: Icon phone" class="contacts__phone">
+        <span class="contacts__numbers">
+          +91-4285-266188 /
+          +91-99429-45555 /
+          +91-4285-266133
+        </span>
+        <img src="#" alt="Icon: Icon mail" class="contacts__mail">
+        <span class="contacts__mail">svcasgobi@gmail.com</span>
+        <img src="#" alt="Icon: Icon internet" class="contacts__internet">
+        <span class="contacts__site">www.svcas.in</span>
+      </div>
+      <!-- /.footer__contacts -->
+    </div>
+    <!-- /.footer-links -->
+    
+    <div class="footer-copyright">
+      <span class="copyright-text">
+        © Copyright 2023. SHREE VENKATESHWARA ARTS AND SCIENCE (CO-ED) COLLEGE
+      </span>
+    </div>
+    <!-- /.footer-copyright -->
+  </footer>
 
   <script src="js/cdn.jsdelivr.net_npm_swiper@10.1.0_swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
